fix issue with colours not appearing on mobile

--- a/src/components/PomoForm.less
+++ b/src/components/PomoForm.less
@@ -25,6 +25,10 @@
     }
   }
 
+  .long-switch-label {
+    color: black;
+  }
+
   .long-switch {
     margin-bottom: 16px;
   }
