--- a/src/components/StickyButtons.less
+++ b/src/components/StickyButtons.less
@@ -8,6 +8,7 @@
   position: fixed;
   bottom: 16px;
   left: 16px;
+  color: black;
 
   .paragraph {
     font-size: 14px;
